<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/field_color">

    <!--Purple team styles -->

    <TextView
        android:id="@+id/purple_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/purple_team"
        android:textColor="@color/purple_button"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/purple_score_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/purple_team"
        android:gravity="center"
        android:text="@string/purple_score"
        android:textColor="@color/purple_score"
        android:textSize="56sp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@+id/center_line_vertical"
        android:layout_toStartOf="@+id/center_line_vertical"
        android:background="@color/purple_button"
        android:onClick="touchDownPurple"
        android:text="@string/purple_touch"
        android:textAllCaps="true"
        android:textColor="@color/purple_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/center_line_vertical"
        android:layout_toRightOf="@+id/center_line_vertical"
        android:background="@color/purple_button"
        android:onClick="conversionPurple"
        android:text="@string/purple_conversion"
        android:textAllCaps="true"
        android:textColor="@color/purple_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="125dp"
        android:layout_toLeftOf="@+id/center_line_vertical"
        android:layout_toStartOf="@+id/center_line_vertical"
        android:background="@color/purple_button"
        android:onClick="extraPointPurple"
        android:text="@string/purple_extra"
        android:textAllCaps="true"
        android:textColor="@color/purple_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="125dp"
        android:layout_toEndOf="@+id/center_line_vertical"
        android:layout_toRightOf="@+id/center_line_vertical"
        android:background="@color/purple_button"
        android:onClick="fieldGoalPurple"
        android:text="@string/purple_field"
        android:textAllCaps="true"
        android:textColor="@color/purple_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Center line here -->

    <View
        android:id="@+id/center_line_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:background="@android:color/holo_blue_bright" />

    <View
        android:id="@+id/center_line_vertical"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/reset_button"
        android:onClick="resetScores"
        android:text="@string/reset_button"
        android:textAllCaps="true"
        android:textColor="@color/reset_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Orange team styles -->

    <TextView
        android:id="@+id/orange_score_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/orange_team"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/orange_score"
        android:textColor="@color/orange_score"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/orange_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/orange_team"
        android:textColor="@color/orange_button"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_line_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@id/center_line_vertical"
        android:layout_toRightOf="@id/center_line_vertical"
        android:background="@color/orange_button"
        android:onClick="fieldGoalOrange"
        android:text="@string/orange_field"
        android:textAllCaps="true"
        android:textColor="@color/orange_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_line_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="155dp"
        android:layout_toEndOf="@+id/center_line_vertical"
        android:layout_toRightOf="@+id/center_line_vertical"
        android:background="@color/orange_button"
        android:onClick="conversionOrange"
        android:text="@string/purple_conversion"
        android:textAllCaps="true"
        android:textColor="@color/orange_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_line_horizontal"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="155dp"
        android:layout_toLeftOf="@+id/center_line_vertical"
        android:layout_toStartOf="@+id/center_line_vertical"
        android:background="@color/orange_button"
        android:onClick="extraPointOrange"
        android:text="@string/orange_extra"
        android:textAllCaps="true"
        android:textColor="@color/orange_text"
        android:textStyle="bold" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_line_horizontal"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="75dp"
        android:layout_toLeftOf="@+id/center_line_vertical"
        android:layout_toStartOf="@+id/center_line_vertical"
        android:background="@color/orange_button"
        android:onClick="touchDownOrange"
        android:text="@string/orange_touch"
        android:textAllCaps="true"
        android:textColor="@color/orange_text"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
